fix: tup-598 sysmon horz. cut off
This was fixed by #369, which is merged in here via main.

But #369 only worked because it was tested at zoom of maybe 90%.

When tested (in PR #339) at zoom 100%, cut off still happens.

So, I'm jsut gonna tweak ratio slightly to avoid cut off.

--- a/apps/tup-ui/src/pages/Dashboard/Dashboard.module.css
+++ b/apps/tup-ui/src/pages/Dashboard/Dashboard.module.css
@@ -29,7 +29,7 @@
     grid-template-columns: 0.5fr 0.5fr;
   }
   @media (--x-wide-and-above) {
-    grid-template-columns: 0.65fr 0.35fr;
+    grid-template-columns: 0.6fr 0.4fr;
   }
 }
 .panels > * {
